--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@300;400;500;700;900&family=Poppins:wght@400;500;700;900&family=Space+Grotesk:wght@400;500;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@200;400&family=Lora:ital,wght@0,400;0,600;1,700&family=Montserrat:wght@300;400;600;700;800&display=swap');
 
 *{
     margin: 0;
@@ -7,13 +6,12 @@
     box-sizing: border-box;
 }
 
-
 body{
     background-color: #181719;
-    font-family: 'Crimson Pro', serif;
     color: #FFFFFF;
+    margin-left: 12px;
 }
-  
+
 header {
     height: 60px;
     display: flex;
@@ -22,15 +20,27 @@ header {
     padding: 0 0.4rem;
     margin-top: 20px;
   }
+
+@media (min-width:660px) {
+
+  header{
+    margin-top: 40px;
+    margin-left: 100px;
+  }  
+}
   
-  .main-logo {
+.main-logo {
     color:#FFFFFF;
-    width: 140px;
-    font-size: 1.1rem;
+    width: 103px;
+    height: 31px;
+    font-family: 'Crimson Pro', serif;
+    font-size: 14px;
+    font-weight: 200;
+    padding: 5px;
     text-decoration: none;
-    padding: 10px;
-    border: 1px solid #FFFFFF   ;
+    border: 1px solid #FFFFFF;
   }
+
   
   .main-nav {
     position: fixed;
@@ -101,6 +111,7 @@ header {
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    margin-right: 20px;
   }
   
 .button-menu.close span:nth-child(2) {
@@ -111,13 +122,13 @@ header {
     display: none;
   }
   
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 815px) {
     .button-menu {
       display: none;
     }
   
     .main-logo {
-      flex-basis: 30%;
+      width: 150px;
     }
   
     .main-nav {
@@ -125,6 +136,8 @@ header {
       margin-left: 0;
       flex-basis: 70%;
       height: 100%;
+      padding-right: 100px;
+      background: #181719;
     }
   
     .nav-links {
@@ -149,33 +162,37 @@ header {
   }
 
 .container-text{
-    width: 90vw;
     margin-top: 4rem;
-    padding: 0 40px 0 40px;
     text-align: justify;
-
 }
 
 h1{
-  font-size: 3rem;
-  font-weight: 900;
+  font-size: 36px;
+  font-family: 'Lora', serif;
+  font-weight: 500;
   line-height: 46px;
+  width: 274px;
+  height: 46px;
+
 
 }
 
 .container-text p{
-  font-size: 0.9rem;
+  font-size: 14px;
   margin-top: 30px;
   font-weight: 400;
+  width: 250px;
+  height: 85px;
 
 }
 
-.container-text a svg{
-  display: inline;
-  fill: #FFFFFF;
-  width: 20px;
-  height: 20px;
-  margin-top: 30px;
+.read-2{
+  display: flex;
+}
+
+.read-2 p{
+  font-family: 'Crimson Pro', serif;
+  width: 81px;
 }
 
 .container-img{
@@ -185,9 +202,15 @@ h1{
   align-items: center;
 }
 
+/* corregir */
+
 .img-1{
-  width: 90vw;
+  width: 320px;
   height: 279.34px;
+}
+
+.img-1 img{
+  width: 100%;
 }
 
 .container-perfil{
